--- a/index.html
+++ b/index.html
@@ -9,22 +9,34 @@
       background-image: url('photo.jpg');
       background-size: cover;
       background-position: center;
+      background-attachment: fixed;
+      height: 100vh;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .window {
-      width: 50%;
-      margin: 5% auto;
+      width: 80%;
+      max-width: 1000px;
+      height: 80vh;
+      margin: 0 auto;
     }
     .window-body {
       display: flex;
+      height: calc(100% - 30px); /* Subtract title bar height */
+      overflow: hidden;
     }
     .tree-view {
       width: 25%;
       border-right: 1px solid #000;
       padding: 10px;
+      overflow-y: auto;
     }
     .content {
       width: 75%;
       padding: 10px;
+      overflow-y: auto;
     }
     .tree-view ul {
       list-style: none;
@@ -72,7 +84,7 @@
         <section id="introduction">
           <h1>Introduction</h1>
           <p>
-            Mechanical engineer with 3+ years of experience in automation engineering. Seeking to leverage my expertise in mechanical design, automation, and system integration to contribute to innovative projects.
+            William Yount is a mechanical engineer with 3+ years of experience in thermal engineering. Seeking to leverage my expertise in mechanical design, automation, and system integration to contribute to innovative projects.
           </p>
         </section>
 
