--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       max-width: 1000px;
       height: 80vh;
       margin: 0 auto;
+      display: flex;
+      flex-direction: column;
     }
     .window-body {
       display: flex;
-      height: calc(100% - 30px); /* Subtract title bar height */
+      flex: 1;
       overflow: hidden;
     }
     .tree-view {
@@ -37,6 +39,7 @@
       width: 75%;
       padding: 10px;
       overflow-y: auto;
+      max-height: 100%;
     }
     .tree-view ul {
       list-style: none;
