--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <style>
     body {
       background-image: url('photo.jpg');
-      background-size: cover;
+      background-size: contain; /* Change to contain */
       background-position: center;
+      background-repeat: no-repeat; /* Prevents tiling */
       background-attachment: fixed;
       height: 100vh;
       margin: 0;
