--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       background-image: url('photo.jpg');
-      background-size: contain; /* Change to contain */
+      background-size: cover; /* Change to contain */
       background-position: center;
       background-repeat: no-repeat; /* Prevents tiling */
       background-attachment: fixed;
