--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>William Yount - Portfolio</title>
-  <link rel="stylesheet" href="XP.css">
+  <link rel="stylesheet" href="xp.css">
   <style>
     body {
       background-image: url('photo.jpg');
