--- a/index.html
+++ b/index.html
@@ -62,10 +62,43 @@
       margin-bottom: 20px;
     }
     .project-image {
-      width: 200px;
-      height: 150px;
+      width: 150px;
+      height: 112px;
       object-fit: cover;
       margin-right: 20px;
+    }
+    /* Updated header styles */
+    h1 {
+      font-size: 24px;
+      margin-bottom: 15px;
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+
+    h3 {
+      font-size: 16px;
+      margin-top: 15px;
+      margin-bottom: 8px;
+    }
+
+    /* Adjust content spacing */
+    .content section {
+      margin-bottom: 30px;
+    }
+
+    /* Adjust list spacing */
+    ul {
+      padding-left: 20px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+    }
+
+    li {
+      margin-bottom: 5px;
     }
   </style>
 </head>
@@ -76,8 +109,8 @@
     </div>
     <div class="window-body">
       <!-- Tree View Navigation -->
-      <nav class="tree-view">
-        <ul>
+      <nav>
+        <ul class="tree-view">
           <li><a href="#introduction">Introduction</a></li>
           <li>
             <span>Projects</span>
