--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
       flex: 1;
       overflow: hidden;
     }
-    .tree-view {
+    .tree-view-container {
       width: 25%;
       border-right: 1px solid #000;
       padding: 10px;
       overflow-y: auto;
+    }
+    .tree-view {
+      width: 100%;
+      height: 50%;
     }
     .content {
       width: 75%;
@@ -109,7 +113,7 @@
     </div>
     <div class="window-body">
       <!-- Tree View Navigation -->
-      <nav>
+      <nav class="tree-view-container">
         <ul class="tree-view">
           <li><a href="#introduction">Introduction</a></li>
           <li>
