removed work exp

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <li><a href="#alfa-romeo-gtv6">Alfa Romeo GTV6 Restoration</a></li>
             </ul>
           </li>
-          <li><a href="#experience">Work Experience</a></li>
+          <!--<li><a href="#experience">Work Experience</a></li>-->
           <li><a href="#education">Education</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -228,6 +228,7 @@
         </section>
 
         <!-- Work Experience Section -->
+        <!--
         <section id="experience">
           <h1>Work Experience</h1>
 
@@ -263,11 +264,11 @@
             </li>
           </ul>
         </section>
-
+        -->
         <!-- Education Section -->
         <section id="education">
           <h1>Education</h1>
-          <h2>Purdue University – Honors College (Graduated 2021)</h2>
+          <h2>Purdue University – Honors College (West Lafayette, Graduated 2021)</h2>
           <p>
             Bachelor of Science in Mechanical Engineering with a minor in Management.
           </p>
