stow step picture

--- a/index.html
+++ b/index.html
@@ -173,18 +173,18 @@
         <section id="stow-step">
           <h2>Stow Step</h2>
           <div class="project-content">
-            <img src="/images/projects/stow-step.jpg" alt="Stow Step Prototype" class="project-image">
+            <img src="/photos/stow-step.png" alt="Stow Step Prototype" class="project-image">
             <div>
               <p><strong>Overview:</strong> Stow Step is a folding step that attaches to Purdue's bed supplier's railing system, designed during my sophomore mechanical design course.</p>
               <h3>Key Achievements:</h3>
               <ul>
                 <li>Innovated a space-saving solution for easy bed access.</li>
                 <li>Collaborated with a team to design and prototype the mechanism.</li>
-                <li>Secured a patent through the Purdue Research Foundation.</li>
-                <li>Utilized SolidWorks for 3D modeling and simulation.</li>
+                <li>Utilized Autodesk Fusion for 3D modeling and FEA simulation.</li>
                 <li>Conducted user testing and iterated design based on feedback.</li>
+                <li>Secured a patent through the Purdue Research Foundation.</li>
               </ul>
-              <p><strong>Patent Information:</strong> <a href="#">Patent Details</a></p>
+              <p><strong>Patent Information:</strong> <a href="https://patentimages.storage.googleapis.com/9f/90/df/71b0d1ab9ab798/US12078014.pdf">Patent US12078014</a></p>
             </div>
           </div>
         </section>
@@ -197,11 +197,11 @@
               <p><strong>Overview:</strong> Participated in the FIRST Robotics Competition (FRC) with Team Stealthtigers during high school.</p>
               <h3>Contributions:</h3>
               <ul>
-                <li>Developed vision processing systems using OpenCV and Microsoft Kinect.</li>
+                <li>Developed vision processing systems using OpenCV and Modified FFMPeg to Process Microsoft Kinect Depth Images.</li>
                 <li>Programmed autonomous robot functionalities in Java and Python.</li>
                 <li>Designed and implemented object recognition algorithms for target acquisition.</li>
                 <li>Collaborated with a multidisciplinary team to integrate software and hardware components.</li>
-                <li>Presented at regional competitions and received recognition for innovation.</li>
+                <li>Developed gyroscope oriented mechanum wheel control scheme </li>
               </ul>
               <p><strong>GitHub Repository:</strong> <a href="https://github.com/yourusername/stealthtigers-robot">View on GitHub</a></p>
             </div>
