--- a/index.html
+++ b/index.html
@@ -211,18 +211,16 @@
         <section id="alfa-romeo-gtv6">
           <h2>1981 Alfa Romeo GTV6 Restoration</h2>
           <div class="project-content">
-            <img src="/images/projects/alfa-romeo-gtv6.jpg" alt="Alfa Romeo GTV6" class="project-image">
+            <img src="/photos/alfa-gtv6.jpeg" alt="Alfa Romeo GTV6" class="project-image">
             <div>
               <p><strong>Overview:</strong> Personal project focused on restoring a classic 1981 Alfa Romeo GTV6.</p>
               <h3>Project Highlights:</h3>
               <ul>
-                <li>Undertaking full mechanical restoration, including engine rebuild and transmission repair.</li>
-                <li>Restoring electrical systems and retrofitting modern components where appropriate.</li>
+                <li>Undertaking full mechanical restoration, including engine rebuild and eventually transmission repair.</li>
+                <li>Planned electronic system overhaul.</li>
                 <li>Performing bodywork restoration, including rust repair and repainting.</li>
-                <li>Documenting the restoration process through photography and video.</li>
                 <li>Learning and applying automotive engineering principles hands-on.</li>
               </ul>
-              <p><strong>Project Blog:</strong> <a href="#">Read More</a></p>
             </div>
           </div>
         </section>
