--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <section id="stow-step">
           <h2>Stow Step</h2>
           <div class="project-content">
-            <img src="/photos/stow-step.png" alt="Stow Step Prototype" class="project-image">
+            <img src="/photos/stowstep.png" alt="Stow Step Prototype" class="project-image">
             <div>
               <p><strong>Overview:</strong> Stow Step is a folding step that attaches to Purdue's bed supplier's railing system, designed during my sophomore mechanical design course.</p>
               <h3>Key Achievements:</h3>
