--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             margin-bottom: 5px;
         }
 
-        /* Modal styles */
+        /* Updated Modal styles */
         .modal {
             display: none;
             position: fixed;
@@ -136,25 +136,35 @@
 
         .modal-content {
             background-color: #ECE9D8;
-            margin: 10% auto;
-            padding: 20px;
+            margin: 5% auto;
+            padding: 0;
             border: 1px solid #0A246A;
-            width: 60%;
-            max-width: 600px;
+            width: 80%;
+            max-width: 800px;
             box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
 
+        .modal-header {
+            background: linear-gradient(to bottom, #0A246A, #A6CAF0);
+            padding: 3px 5px;
+            color: white;
+            font-weight: bold;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         .close {
-            color: #0A246A;
-            float: right;
-            font-size: 28px;
+            color: white;
+            font-size: 20px;
             font-weight: bold;
             cursor: pointer;
         }
 
         .swiper-container {
             width: 100%;
-            height: 300px;
+            height: 400px;
+            background-color: #fff;
         }
 
         .swiper-slide img {
@@ -164,7 +174,14 @@
         }
 
         .swiper-button-next, .swiper-button-prev {
+            background-color: rgba(236, 233, 216, 0.7);
             color: #0A246A;
+            padding: 30px 20px;
+            transition: background-color 0.3s;
+        }
+
+        .swiper-button-next:hover, .swiper-button-prev:hover {
+            background-color: rgba(236, 233, 216, 0.9);
         }
 
         .swiper-pagination-bullet-active {
@@ -370,10 +387,13 @@
         </div>
     </div>
 
-    <!-- Add this modal structure at the end of the body -->
+    <!-- Updated modal structure -->
     <div id="imageModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <div class="modal-header">
+                <div class="title-bar-text">BeverageBot Images</div>
+                <span class="close">&times;</span>
+            </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="/photos/beveragebot/01.jpg" alt="BeverageBot 1"></div>
@@ -398,6 +418,7 @@
             },
             pagination: {
                 el: '.swiper-pagination',
+                clickable: true,
             },
         });
 
