--- a/index.html
+++ b/index.html
@@ -208,12 +208,13 @@
                     </p>
                     <h2>Areas of Expertise:</h2>
                     <ul>
-                        <li>Mechanical Component Design</li>
                         <li>Automation and Controls</li>
+                        <li>Thermal Transfer</li>
+                        <li>Mechanical Component Design</li>
                         <li>Rapid Prototyping</li>
                         <li>System Integration</li>
-                        <li>Motion Control Systems</li>
                         <li>Python Scripting</li>
+                        <li>Motion Control Systems</li>
                     </ul>
                 </section>
 
