--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <button aria-label="Close" class="close"></button>
                 </div>
             </div>
-            <div class="window-body">
+            <div class="window-body swiper">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="/photos/beveragebot/01.jpg" alt="BeverageBot 1"></div>
@@ -387,10 +387,10 @@
                         <div class="swiper-slide"><img src="/photos/beveragebot/04.jpg" alt="BeverageBot 4"></div>
                         <div class="swiper-slide"><img src="/photos/beveragebot/05.jpg" alt="BeverageBot 5"></div>
                     </div>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                 </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
             </div>
         </div>
     </div>
