--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                     <button aria-label="Close" class="close"></button>
                 </div>
             </div>
-            <div class="window-body swiper">
-                <div class="swiper-container">
+            <div class="window-body">
+                <div class="swiper swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="/photos/beveragebot/01.jpg" alt="BeverageBot 1"></div>
                         <div class="swiper-slide"><img src="/photos/beveragebot/02.jpg" alt="BeverageBot 2"></div>
