--- a/index.html
+++ b/index.html
@@ -160,14 +160,6 @@
             height: 100%;
             object-fit: contain;
         }
-
-        .swiper-button-next, .swiper-button-prev {
-            color: #0A246A;
-        }
-
-        .swiper-pagination-bullet-active {
-            background-color: #0A246A;
-        }
     </style>
 </head>
 
@@ -202,7 +194,7 @@
                 <section id="introduction">
                     <h1>Introduction</h1>
                     <p>
-                        Mechanical engineer with over 3 years of experience in automation engineering, mechanical
+                        Mechanical engineer with over 3 years of industry experience in automation engineering, thermal and mechanical
                         design, and system integration. Passionate about building innovative solutions and contributing
                         to projects that push technological boundaries.
                     </p>
