added snippet about talos

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 </li>
                             </ul>
                             <p><strong>GitHub Repository:</strong> <a
-                                    href="https://github.com/yourusername/beveragebot">View on GitHub</a></p>
+                                    href="https://github.com/younters/beveragebot">View on GitHub</a></p>
                         </div>
                     </div>
                 </section>
@@ -276,6 +276,7 @@
                                     Microsoft Kinect Depth Images.</li>
                                 <li>Served as chief electronics and software designer in multidisciplinary team.</li>
                                 <li>Developed gyroscope-based ground truth orienting mechanum wheel control scheme.</li>
+                                <li>Competed in the U.S. Special Operations Command’s Tactical Assault Light Operator Suit (TALOS) project. Designed the legs of an exoskeleton suit for soldiers. Presented work at security conferences around Florida</li>
                             </ul>
                             <p><strong>GitHub Repository:</strong> <a
                                     href="https://github.com/stealthtigers3164/2017_FRC3164_Steamworks">View on
