--- a/index.html
+++ b/index.html
@@ -205,11 +205,9 @@
                     <ul>
                         <li>Automation and Controls</li>
                         <li>Thermal Transfer</li>
-                        <li>Mechanical Component Design</li>
-                        <li>Rapid Prototyping</li>
-                        <li>System Integration</li>
-                        <li>Python Scripting</li>
-                        <li>Motion Control Systems</li>
+                        <li>Mechanical Design and Quick Prototyping</li>
+                        <li>Python and Computer Scripting</li>
+                        <li>Systems Engineering</li>
                     </ul>
                 </section>
 
