--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <style>
         body {
-            background-image: url('photo.jpg');
+            background-image: url('bg-photo.jpg');
             background-size: cover;
             /* Change to contain */
             background-position: center;
@@ -301,6 +301,21 @@
                         </div>
                     </div>
                 </section>
+
+                <!--<section id="other projects">
+                    <h2>Various Other Projects</h2>
+                    <div class="project-content">
+                        <div>
+                            <h3>Random Stuff:</h3>
+                            <ul>
+                                <li>Satellite to LULC GaN Network</li>
+                                <li></li>
+                                <li>Performing bodywork restoration, including rust repair and repainting.</li>
+                                <li>Learning and applying automotive engineering principles hands-on.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>-->
 
                 <!-- Work Experience Section -->
                 <!--
