--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             background-repeat: no-repeat;
             /* Prevents tiling */
             background-attachment: fixed;
-            height: 100vh;
+            height: 100%;
             margin: 0;
             display: flex;
             justify-content: center;
@@ -26,7 +26,7 @@
         .window {
             width: 80%;
             max-width: 1000px;
-            height: 80vh;
+            height: 80%;
             margin: 0 auto;
             display: flex;
             flex-direction: column;
