--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             display: flex;
             flex-direction: column;
         }
-        
+
         @media (max-width: 767px) {
             .window {
                 width: 95%;
-                height: auto;
-                min-height: 80vh;
-                max-height: none;
+                height: calc(100vh - 40px);
+                margin: 20px auto; 
+                max-height: none; 
             }
         }
 
