--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
                 <section id="experience">
                     <h1>Work Experience</h1>
           
-                    <h2>Thermal Engineer at Maxar in Palo Alto, CA (2021 - Present)</h2>
+                    <h3>Thermal Engineer at Maxar in Palo Alto, CA (2021 - Present)</h3>
                     <ul>
                         <li>
-                          Created automation software to automate and enable remote control of thermal vacuum chamber testing, Python based software incorporated threading, GUI, and easily editable configuration files. Interfaced with equipment over Serial, VISA, and Serial MODBUS. Automated equiptment poweroffs in thermal overrun scenarios; remote SMS alerts.
+                          Created automation software to automate and enable remote control of thermal vacuum chamber testing, Python based software incorporated threading, GUI, and easily editable configuration files. Interfaced with equipment over Serial, VISA, and Serial MODBUS. Automated equiptment poweroffs in thermal overrun scenarios; remote SMS alerts. Reduced direct labor for testing by removing the need for dedicated night shifts.
                         </li>
                       <li>
                         Developed and analyzed spacecraft thermal models in Thermal Desktop, primarily working on IS-40e and <a href="https://www.nasa.gov/missions/artemis/gateway/a-powerhouse-in-deep-space-gateways-power-and-propulsion-element">PPE</a>.
@@ -240,7 +240,7 @@
                       </li>
                     </ul>
           
-                    <h2>GIS ML Software Developer at Digital Global/Maxar in Tampa, FL (Summers 2019, 2020)</h2>
+                    <h3>GIS ML Software Developer Intern at Digital Global/Maxar in Tampa, FL (Summers 2019, 2020)</h3>
                     <ul>
                       <li>
                         Trained ImageNet-based classification and segmentation models on unique archival and satellite imagery using TensorFlow and Python.
