--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <h3>Thermal Engineer at Maxar in Palo Alto, CA (2021 - Present)</h3>
                     <ul>
                         <li>
-                          Created automation software to automate and enable remote control of thermal vacuum chamber testing, Python based software incorporated threading, GUI, and easily editable configuration files. Interfaced with equipment over Serial, VISA, and Serial MODBUS. Automated equiptment poweroffs in thermal overrun scenarios; remote SMS alerts. Reduced direct labor for testing by removing the need for dedicated night shifts.
+                          Developed automation software to enable remote and automated control of thermal vacuum chamber testing, Python based software incorporated threading, GUI, and easily editable configuration files. Interfaced with equipment over Serial, VISA, and Serial MODBUS. Automated equiptment poweroffs in thermal overrun scenarios; remote SMS alerts. Reduced direct labor for testing by removing the need for dedicated night shifts.
                         </li>
                       <li>
                         Developed and analyzed spacecraft thermal models in Thermal Desktop, primarily working on IS-40e and <a href="https://www.nasa.gov/missions/artemis/gateway/a-powerhouse-in-deep-space-gateways-power-and-propulsion-element">PPE</a>.
