--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                           Developed automation software to enable remote and automated control of vacuum chambers, thermostats, and powersupplys for requirements testing and calibration. Python based software that incorporated threading, GUI, and easily editable configuration files. Interfaced with equipment over Serial, VISA, and Serial MODBUS. Automated equiptment poweroffs in thermal overrun scenarios; remote SMS alerts. Reduced direct labor for testing by removing the need for dedicated night shifts.
                         </li>
                       <li>
-                        Developed and analyzed spacecraft thermal models in Thermal Desktop, primarily working on IS-40e and <a href="https://www.nasa.gov/missions/artemis/gateway/a-powerhouse-in-deep-space-gateways-power-and-propulsion-element">PPE</a>.
+                        Developed and analyzed spacecraft thermal models in Thermal Desktop, primarily working on IS-40e and <a href="https://www.nasa.gov/missions/artemis/gateway/a-powerhouse-in-deep-space-gateways-power-and-propulsion-element">PPE</a>. PPE's unique unconstrained orbital requirements allowed me to apply statistical models like random forests and simple neural nets to spatially predict temperatures on the dual-axial rotating antenna pallets.  
                       </li>
                       <li>
                         Oversaw spacecraft thermal testing during thermal vacuum chamber (TVAC) validation for both flight hardware and whole spacecraft.
