--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         Oversaw spacecraft thermal testing during thermal vacuum chamber (TVAC) validation for both flight hardware and whole spacecraft.
                       </li>
                       <li>
-                        Administered internal library web app and oversaw its transition to AWS, utilizing Perl.
+                        Administered internal library web app and oversaw its transition to AWS. The application was written in Perl in the 90s with no documentation and references no longer existing libraries, making it a challenge to migrate.
                       </li>
                     </ul>
           
