--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                 <!-- Contact Section -->
                 <section id="contact">
                     <h1>Contact</h1>
-                    <p><strong>Email:</strong> <a href="mailto:will@yount.gg">will@yount.gg</a></p>
-                    <p><strong>Phone:</strong><span id="phone"></span></p>
+                    <p><strong>Email:</strong> <a href="mailto:will@yount.gg"><span id="email"></span></a></p>
+                    <p><strong>Phone:</strong> <span id="phone"></span></p>
                 </section>
             </div>
         </div>
@@ -432,6 +432,7 @@
 
         // Obfuscate phone number
         document.getElementById('phone').innerText = '(813) 777-'+'1984';
+        document.getElementById('email').innerText = 'will@'+'yount.gg';
     </script>
 </body>
 
